fix the dark mode

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,6 +4,9 @@
 
 }
 
+html.dark{
+    background-color: #232c35;
+}
 
 body{
     /*background-color: #CFD8DC;*/
